--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,8 +22,8 @@ monitor=eDP-1, 1920x1080@144.14900, 0x1000, 1
 # Set programs that you use
 $terminal = kitty
 $fileManager = kitty ranger $HOME
-$menu = rofi -show drun
-$windowMenu = rofi -show window
+$menu = rofi -show drun -show-icons
+$windowMenu = rofi -show window -show-icons
 $shellMenu = bash -c "$(~/.config/hypr/scripts/launch-rofi-frece.sh shell)"
 $terminalMenu = kitty bash -c "$(~/.config/hypr/scripts/launch-rofi-frece.sh terminal)"
 $clipHistMenu = cliphist list | rofi -dmenu | cliphist decode | wl-copy
