--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -250,6 +250,7 @@ bindl = ,switch:Lid Switch,exec, ~/.config/hypr/scripts/toggle-lid.sh
 #Exec once's
 exec-once = pactl set-source-volume alsa_input.pci-0000_74_00.6.analog-stereo 25%
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd --all
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = /usr/lib/kdeconnectd
 exec-once = /usr/bin/kdeconnect-indicator
