--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -262,3 +262,5 @@ exec-once = blueman-applet
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = wl-clip-persist --clipboard both
+exec-once = rm /home/gchamon/.cache/cliphist/db
+
