--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
+# monitor=,preferred,auto,1
 monitor=eDP-1, 1920x1080@144.14900, 0x1000, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
