--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,6 +36,10 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = WLR_NO_HARDWARE_CURSORS,1
 env = GTK_THEME,
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+# env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
