replace swaylock with hyprlock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -246,10 +246,12 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Session management
-bind = $mainMod, L, exec, ~/.config/hypr/scripts/wayland-lock.sh
+bind = $mainMod, L, exec, hyprlock
+bindl=,switch:Lid Switch, exec, hyprlock
+#bind = $mainMod, L, exec, ~/.config/hypr/scripts/wayland-lock.sh
+#bindl=,switch:Lid Switch, exec, ~/.config/hypr/scripts/wayland-lock.sh
 bind = CTRL, Escape, exec, gnome-system-monitor
-
-bindl = ,switch:Lid Switch,exec, ~/.config/hypr/scripts/toggle-lid.sh
+# bindl = ,switch:Lid Switch,exec, ~/.config/hypr/scripts/toggle-lid.sh
 
 #Exec once's
 exec-once = pactl set-source-volume alsa_input.pci-0000_74_00.6.analog-stereo 25%
