--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -15,45 +15,78 @@ background {
 
 input-field {
     monitor =
-    size = 200, 50
+    size = 250, 50
     outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
 
-    position = 0, -20
+    dots_size = 0.26 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.64 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    dots_rouding = -1
+
+    rounding = 22
+    outer_color = rgb(ffffff)
+    inner_color = rgb(000000)
+    font_color = rgb(170, 170, 170)
+    fade_on_empty = true
+    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
+
+    position = 0, 120
+    halign = center
+    valign = bottom
+}
+
+# Hours
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
+    color = $color6
+    font_size = 112
+    font_family = Geist Mono 10
+    shadow_passes = 3
+    shadow_size = 4
+
+    position = 0, 220
     halign = center
     valign = center
 }
 
+# Minutes
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date '+%c')"
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 32
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $color6
+    font_size = 112
+    font_family = Geist Mono 10
+    shadow_passes = 3
+    shadow_size = 4
 
-    position = 0, 200
+    position = 0, 80
+    halign = center
+    valign = center
+}
+
+# Today
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
+    color = $color7
+    font_size = 22
+    font_family = JetBrainsMono Nerd Font 10
+
+    position = 0, -160
+    halign = center
+    valign = center
+}
+
+# Week
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
+    color = $color7
+    font_size = 18
+    font_family = JetBrainsMono Nerd Font 10
+
+    position = 0, -200
     halign = center
     valign = center
 }
