change new_is_master to new_status=master
from https://github.com/JaKooLit/Hyprland-Dots/issues/346

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -124,7 +124,8 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # https://github.com/JaKooLit/Hyprland-Dots/issues/346
+    new_status=master
 }
 
 gestures {
