logging shell executions to /tmp

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,7 @@ $terminal = kitty
 $fileManager = kitty ranger $HOME
 $menu = rofi -show drun -show-icons
 $windowMenu = rofi -show window -show-icons
-$shellMenu = bash -c "$(~/.config/hypr/scripts/launch-rofi-frece.sh shell)"
+$shellMenu = ~/.config/hypr/scripts/launch-shell-menu.sh
 $terminalMenu = kitty bash -c "$(~/.config/hypr/scripts/launch-rofi-frece.sh terminal)"
 $clipHistMenu = cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
