change order of kitty layouts so that the first one is vertical

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,6 @@
 include current-theme.conf
 # END_KITTY_THEME
 
-enabled_layouts Fat,Tall,Vertical,Grid
+enabled_layouts Tall,Fat,Vertical,Grid
 map ctrl+shift+t new_tab_with_cwd !neighbor
 map ctrl+shift+enter new_window_with_cwd
