disable hyprland update news

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -255,6 +255,9 @@ bindl=,switch:Lid Switch, exec, hyprlock
 bind = CTRL, Escape, exec, gnome-system-monitor
 # bindl = ,switch:Lid Switch,exec, ~/.config/hypr/scripts/toggle-lid.sh
 
+# Ecosystem configs
+ecosystem:no_update_news = true
+
 #Exec once's
 exec-once = pactl set-source-volume alsa_input.pci-0000_74_00.6.analog-stereo 25%
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
