set correct order or gpus; workaround for laggy cursor

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,6 +39,17 @@ env = GTK_THEME,
 # env = GBM_BACKEND,nvidia-drm
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 # env = XDG_SESSION_TYPE,wayland
+env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+
+# fix for laggy cursor on second monitor
+# https://github.com/hyprwm/Hyprland/issues/9250
+cursor {
+    no_hardware_cursors = true
+}
+
+render {
+    allow_early_buffer_release = false
+}
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
