multiple changes - add couple of missing plugins in lvim - fix deprecation issues in hyprland.conf

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,10 +47,6 @@ cursor {
     no_hardware_cursors = true
 }
 
-render {
-    allow_early_buffer_release = false
-}
-
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = br
@@ -163,7 +159,7 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrule = float, ^(ksnip)(.*)$
+windowrule = float,title:^(ksnip)(.*)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
