--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,6 @@
 include current-theme.conf
 # END_KITTY_THEME
 
-enabled_layouts Tall,Grid,Stack
+enabled_layouts Tall,Grid,Vertical,Stack
 map ctrl+shift+t new_tab_with_cwd !neighbor
 map ctrl+shift+enter new_window_with_cwd
