add lazyvim snacks; add shortcuts to control brightness

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -262,6 +262,10 @@ bindl=,switch:Lid Switch, exec, hyprlock
 bind = CTRL, Escape, exec, gnome-system-monitor
 # bindl = ,switch:Lid Switch,exec, ~/.config/hypr/scripts/toggle-lid.sh
 
+# Brightness
+bind = $mainMod CTRL, 86, exec, brightnessctl --device 'amdgpu_bl0' set 10%+
+bind = $mainMod CTRL, 82, exec, brightnessctl --device 'amdgpu_bl0' set 10%-
+
 # Ecosystem configs
 ecosystem:no_update_news = true
 
