--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,23 +1,4 @@
-# This is an example Hyprland config file.
-#
-# Refer to the wiki for more information.
-
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,1
-monitor=eDP-1, 1920x1080@144.14900, 0x300, 1
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/config/current.conf
 
 # Set programs that you use
 $terminal = kitty
@@ -32,14 +13,10 @@ $clipHistMenu = cliphist list | rofi -dmenu | cliphist decode | wl-copy
 env = HYPRCURSOR_THEME,Breeze5
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
-# env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = WLR_NO_HARDWARE_CURSORS,1
 env = GTK_THEME,
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = XDG_SESSION_TYPE,wayland
-env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+
 
 # fix for laggy cursor on second monitor
 # https://github.com/hyprwm/Hyprland/issues/9250
