--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -261,6 +261,6 @@ exec-once = blueman-applet
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = wl-clip-persist --clipboard both
-exec-once = rm /home/gchamon/.cache/cliphist/db
+exec-once = rm ~/.cache/cliphist/db
 exec-once = [workspace special:magic silent] kitty
 
