--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -240,8 +240,8 @@ bind = CTRL, Escape, exec, gnome-system-monitor
 # bindl = ,switch:Lid Switch,exec, ~/.config/hypr/scripts/toggle-lid.sh
 
 # Brightness
-bind = $mainMod CTRL, 86, exec, brightnessctl --device 'amdgpu_bl0' set 10%+
-bind = $mainMod CTRL, 82, exec, brightnessctl --device 'amdgpu_bl0' set 10%-
+bind = $mainMod CTRL, 86, exec, brightnessctl --device $backlightDevice set 10%+
+bind = $mainMod CTRL, 82, exec, brightnessctl --device $backlightDevice set 10%-
 
 # Ecosystem configs
 ecosystem:no_update_news = true
