add Keyboard shortcuts human-readable documentation

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@ nvim/lazy-lock.json
 !BACKUP_AND_RESTORE.md
 !CONTAINERS.md
 !KEYBOARD_CUSTOMIZATIONS.md
+!KEYBOARD_SHORTCUTS.md
 !xkb-customizations
