add xorg-xhost and add exec-once config
important for applications like gparted
see <https://wiki.archlinux.org/title/Parted#Installation> note on
`xorg-xhost` optional dependency

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -263,4 +263,5 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = wl-clip-persist --clipboard both
 exec-once = rm ~/.cache/cliphist/db
 exec-once = [workspace special:magic silent] kitty
+exec-once = xhost +SI:localuser:root
 
