--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -14,7 +14,7 @@ cursor                #97979B
 cursor_text_color     #282A36
 
 # black
-color0   #282a36
+color0   #121319
 color8   #686868
 
 # red
