mx keys when connected via bluetooth has a different name

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,6 +48,12 @@ device {
     kb_variant = intl
 }
 
+device {
+    name = mx-keys-keyboard
+    kb_layout = us
+    kb_variant = intl
+}
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
