--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -89,10 +89,8 @@ master {
     new_status=master
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
-}
+# gestures reworked, see https://github.com/basecamp/omarchy/issues/1595#issuecomment-3278627630
+gesture = 3, horizontal, workspace
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
