moved md files to docs/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ nvim/lazy-lock.json
 !KEYBOARD_CUSTOMIZATIONS.md
 !KEYBOARD_SHORTCUTS.md
 !README.md
+!CLAUDE.md
 !cronjobs/
 !docs/
 !kitty/current-theme.conf
