--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,24 @@
 /*
-!/hypr
+nvim/lazy-lock.json
+!.p10k*
+!.zshrc
 !/dunst
-!/waybar
+!/hypr
 !/lvim
 !/nvim
-nvim/lazy-lock.json
-!onedrive/config
-!onedrive/sync_list
-!kitty/current-theme.conf
-!kitty/kitty.conf
-!rofi/
-!cronjobs/
-!.zshrc
-!docs/
-!.p10k*
-!README.md
+!/waybar
 !BACKUP_AND_RESTORE.md
 !DEVELOPMENT.md
+!GUIDE.md
 !KEYBOARD_CUSTOMIZATIONS.md
 !KEYBOARD_SHORTCUTS.md
+!README.md
+!CLAUDE.md
+!cronjobs/
+!docs/
+!kitty/current-theme.conf
+!kitty/kitty.conf
+!onedrive/config
+!onedrive/sync_list
+!rofi/
 !xkb-customizations
