migrate windowrule for ksnip to new syntax

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -110,7 +110,11 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrule = float,title:^(ksnip)(.*)$
+windowrule {
+    name = ksnip
+    match:title = ^(ksnip)(.*)$
+    float = on
+}
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
