add brightness up/down keybindings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -220,6 +220,8 @@ bind = CTRL, Escape, exec, gnome-system-monitor
 # Brightness
 bind = $mainMod CTRL, 86, exec, brightnessctl --device $backlightDevice set 10%+
 bind = $mainMod CTRL, 82, exec, brightnessctl --device $backlightDevice set 10%-
+bind = , 233, exec, brightnessctl --device $backlightDevice set 10%+
+bind = , 232, exec, brightnessctl --device $backlightDevice set 10%-
 
 # Ecosystem configs
 ecosystem:no_update_news = true
