change hyprpaper dist conf file to comply with syntax change

--- a/hypr/hyprpaper.dist.conf
+++ b/hypr/hyprpaper.dist.conf
@@ -1,8 +1,17 @@
-
 ipc = off
 splash = false
 preload = /usr/share/backgrounds/archlinux/wave.png
 preload = /usr/share/backgrounds/archlinux/awesome.png
-wallpaper = eDP-2, /usr/share/backgrounds/archlinux/wave.png
-wallpaper = HDMI-A-1, /usr/share/backgrounds/archlinux/awesome.png
+
+wallpaper {
+  monitor = eDP-1
+  path = /usr/share/backgrounds/archlinux/wave.png
+  fit_mode = cover
+}
+
+wallpaper {
+  monitor = HDMI-A-1
+  path = /usr/share/backgrounds/archlinux/awesome.png
+  fit_mode = cover
+}
 
