add kitty defaults and reorganized .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,6 @@
 nvim/lazy-lock.json
 !.p10k*
 !.zshrc
-!/dunst
-!/hypr
-!/lvim
-!/nvim
-!/waybar
 !BACKUP_AND_RESTORE.md
 !DEVELOPMENT.md
 !GUIDE.md
@@ -14,11 +9,15 @@ nvim/lazy-lock.json
 !KEYBOARD_SHORTCUTS.md
 !README.md
 !CLAUDE.md
-!cronjobs/
-!docs/
-!kitty/current-theme.conf
-!kitty/kitty.conf
-!onedrive/config
-!onedrive/sync_list
-!rofi/
-!xkb-customizations
+!/dunst
+!/hypr
+!/lvim
+!/nvim
+!/waybar
+!/cronjobs
+!/docs
+!/kitty
+!/onedrive/config
+!/onedrive/sync_list
+!/rofi
+!/xkb-customizations
